--- a/Final/ADSE/CleanItUp.ipynb
+++ b/Final/ADSE/CleanItUp.ipynb
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "id": "b0bf8951",
    "metadata": {},
    "outputs": [
@@ -1130,6 +1130,7 @@
        "      <th>Indicator Code</th>\n",
        "      <th>Year</th>\n",
        "      <th>Value</th>\n",
+       "      <th>Year_Date</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1141,6 +1142,7 @@
        "      <td>SH.ANM.CHLD.ZS</td>\n",
        "      <td>2000</td>\n",
        "      <td>37.50</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>221</th>\n",
@@ -1150,6 +1152,7 @@
        "      <td>SH.ANM.CHLD.ZS</td>\n",
        "      <td>2001</td>\n",
        "      <td>36.70</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>222</th>\n",
@@ -1159,6 +1162,7 @@
        "      <td>SH.ANM.CHLD.ZS</td>\n",
        "      <td>2002</td>\n",
        "      <td>35.96</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>223</th>\n",
@@ -1168,6 +1172,7 @@
        "      <td>SH.ANM.CHLD.ZS</td>\n",
        "      <td>2003</td>\n",
        "      <td>35.29</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>224</th>\n",
@@ -1177,6 +1182,7 @@
        "      <td>SH.ANM.CHLD.ZS</td>\n",
        "      <td>2004</td>\n",
        "      <td>34.64</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>225</th>\n",
@@ -1186,6 +1192,7 @@
        "      <td>SH.ANM.CHLD.ZS</td>\n",
        "      <td>2005</td>\n",
        "      <td>34.06</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>226</th>\n",
@@ -1195,6 +1202,7 @@
        "      <td>SH.ANM.CHLD.ZS</td>\n",
        "      <td>2006</td>\n",
        "      <td>33.51</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>227</th>\n",
@@ -1204,6 +1212,7 @@
        "      <td>SH.ANM.CHLD.ZS</td>\n",
        "      <td>2007</td>\n",
        "      <td>32.95</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>228</th>\n",
@@ -1213,6 +1222,7 @@
        "      <td>SH.ANM.CHLD.ZS</td>\n",
        "      <td>2008</td>\n",
        "      <td>32.37</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>229</th>\n",
@@ -1222,6 +1232,7 @@
        "      <td>SH.ANM.CHLD.ZS</td>\n",
        "      <td>2009</td>\n",
        "      <td>31.87</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>230</th>\n",
@@ -1231,6 +1242,7 @@
        "      <td>SH.ANM.CHLD.ZS</td>\n",
        "      <td>2010</td>\n",
        "      <td>31.49</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>231</th>\n",
@@ -1240,6 +1252,7 @@
        "      <td>SH.ANM.CHLD.ZS</td>\n",
        "      <td>2011</td>\n",
        "      <td>31.15</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>232</th>\n",
@@ -1249,6 +1262,7 @@
        "      <td>SH.ANM.CHLD.ZS</td>\n",
        "      <td>2012</td>\n",
        "      <td>30.92</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>233</th>\n",
@@ -1258,6 +1272,7 @@
        "      <td>SH.ANM.CHLD.ZS</td>\n",
        "      <td>2013</td>\n",
        "      <td>30.79</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>234</th>\n",
@@ -1267,6 +1282,7 @@
        "      <td>SH.ANM.CHLD.ZS</td>\n",
        "      <td>2014</td>\n",
        "      <td>30.77</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>235</th>\n",
@@ -1276,6 +1292,7 @@
        "      <td>SH.ANM.CHLD.ZS</td>\n",
        "      <td>2015</td>\n",
        "      <td>30.82</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>236</th>\n",
@@ -1285,6 +1302,7 @@
        "      <td>SH.ANM.CHLD.ZS</td>\n",
        "      <td>2016</td>\n",
        "      <td>30.89</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>237</th>\n",
@@ -1294,6 +1312,7 @@
        "      <td>SH.ANM.CHLD.ZS</td>\n",
        "      <td>2017</td>\n",
        "      <td>30.98</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>238</th>\n",
@@ -1303,6 +1322,7 @@
        "      <td>SH.ANM.CHLD.ZS</td>\n",
        "      <td>2018</td>\n",
        "      <td>31.09</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>239</th>\n",
@@ -1312,6 +1332,7 @@
        "      <td>SH.ANM.CHLD.ZS</td>\n",
        "      <td>2019</td>\n",
        "      <td>31.28</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1362,30 +1383,30 @@
        "238  Prevalence of anemia among children (% of chil...  SH.ANM.CHLD.ZS  2018   \n",
        "239  Prevalence of anemia among children (% of chil...  SH.ANM.CHLD.ZS  2019   \n",
        "\n",
-       "     Value  \n",
-       "220  37.50  \n",
-       "221  36.70  \n",
-       "222  35.96  \n",
-       "223  35.29  \n",
-       "224  34.64  \n",
-       "225  34.06  \n",
-       "226  33.51  \n",
-       "227  32.95  \n",
-       "228  32.37  \n",
-       "229  31.87  \n",
-       "230  31.49  \n",
-       "231  31.15  \n",
-       "232  30.92  \n",
-       "233  30.79  \n",
-       "234  30.77  \n",
-       "235  30.82  \n",
-       "236  30.89  \n",
-       "237  30.98  \n",
-       "238  31.09  \n",
-       "239  31.28  "
+       "     Value Year_Date  \n",
+       "220  37.50       NaT  \n",
+       "221  36.70       NaT  \n",
+       "222  35.96       NaT  \n",
+       "223  35.29       NaT  \n",
+       "224  34.64       NaT  \n",
+       "225  34.06       NaT  \n",
+       "226  33.51       NaT  \n",
+       "227  32.95       NaT  \n",
+       "228  32.37       NaT  \n",
+       "229  31.87       NaT  \n",
+       "230  31.49       NaT  \n",
+       "231  31.15       NaT  \n",
+       "232  30.92       NaT  \n",
+       "233  30.79       NaT  \n",
+       "234  30.77       NaT  \n",
+       "235  30.82       NaT  \n",
+       "236  30.89       NaT  \n",
+       "237  30.98       NaT  \n",
+       "238  31.09       NaT  \n",
+       "239  31.28       NaT  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1415,22 +1436,276 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "id": "d6ead1eb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "SEA_Anemia_U5_melted['Year_Date'] = pd.to_datetime(SEA_Anemia_U5_melted['Year'].astype(str) + '-01-01')\n"
+    "df_with_averages['Year_Date'] = pd.to_datetime(df_with_averages['Year'].astype(str) + '-01-01')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 49,
+   "id": "717175fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country Name</th>\n",
+       "      <th>Country Code</th>\n",
+       "      <th>Indicator Name</th>\n",
+       "      <th>Indicator Code</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Value</th>\n",
+       "      <th>Year_Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Brunei Darussalam</td>\n",
+       "      <td>BRN</td>\n",
+       "      <td>Prevalence of anemia among children (% of chil...</td>\n",
+       "      <td>SH.ANM.CHLD.ZS</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>2000-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Viet Nam</td>\n",
+       "      <td>VNM</td>\n",
+       "      <td>Prevalence of anemia among children (% of chil...</td>\n",
+       "      <td>SH.ANM.CHLD.ZS</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>33.6</td>\n",
+       "      <td>2000-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Timor-Leste</td>\n",
+       "      <td>TLS</td>\n",
+       "      <td>Prevalence of anemia among children (% of chil...</td>\n",
+       "      <td>SH.ANM.CHLD.ZS</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>51.3</td>\n",
+       "      <td>2000-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Thailand</td>\n",
+       "      <td>THA</td>\n",
+       "      <td>Prevalence of anemia among children (% of chil...</td>\n",
+       "      <td>SH.ANM.CHLD.ZS</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>26.5</td>\n",
+       "      <td>2000-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Singapore</td>\n",
+       "      <td>SGP</td>\n",
+       "      <td>Prevalence of anemia among children (% of chil...</td>\n",
+       "      <td>SH.ANM.CHLD.ZS</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>11.4</td>\n",
+       "      <td>2000-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Philippines</td>\n",
+       "      <td>PHL</td>\n",
+       "      <td>Prevalence of anemia among children (% of chil...</td>\n",
+       "      <td>SH.ANM.CHLD.ZS</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>2000-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>220</th>\n",
+       "      <td>Average</td>\n",
+       "      <td>AVG</td>\n",
+       "      <td>Prevalence of anemia among children (% of chil...</td>\n",
+       "      <td>SH.ANM.CHLD.ZS</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>37.5</td>\n",
+       "      <td>2000-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Myanmar</td>\n",
+       "      <td>MMR</td>\n",
+       "      <td>Prevalence of anemia among children (% of chil...</td>\n",
+       "      <td>SH.ANM.CHLD.ZS</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>57.5</td>\n",
+       "      <td>2000-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Indonesia</td>\n",
+       "      <td>IDN</td>\n",
+       "      <td>Prevalence of anemia among children (% of chil...</td>\n",
+       "      <td>SH.ANM.CHLD.ZS</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>43.9</td>\n",
+       "      <td>2000-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Malaysia</td>\n",
+       "      <td>MYS</td>\n",
+       "      <td>Prevalence of anemia among children (% of chil...</td>\n",
+       "      <td>SH.ANM.CHLD.ZS</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>20.2</td>\n",
+       "      <td>2000-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Lao PDR</td>\n",
+       "      <td>LAO</td>\n",
+       "      <td>Prevalence of anemia among children (% of chil...</td>\n",
+       "      <td>SH.ANM.CHLD.ZS</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>50.2</td>\n",
+       "      <td>2000-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Cambodia</td>\n",
+       "      <td>KHM</td>\n",
+       "      <td>Prevalence of anemia among children (% of chil...</td>\n",
+       "      <td>SH.ANM.CHLD.ZS</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>65.9</td>\n",
+       "      <td>2000-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>221</th>\n",
+       "      <td>Average</td>\n",
+       "      <td>AVG</td>\n",
+       "      <td>Prevalence of anemia among children (% of chil...</td>\n",
+       "      <td>SH.ANM.CHLD.ZS</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>36.7</td>\n",
+       "      <td>2001-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Viet Nam</td>\n",
+       "      <td>VNM</td>\n",
+       "      <td>Prevalence of anemia among children (% of chil...</td>\n",
+       "      <td>SH.ANM.CHLD.ZS</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>32.2</td>\n",
+       "      <td>2001-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Timor-Leste</td>\n",
+       "      <td>TLS</td>\n",
+       "      <td>Prevalence of anemia among children (% of chil...</td>\n",
+       "      <td>SH.ANM.CHLD.ZS</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>49.9</td>\n",
+       "      <td>2001-01-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Country Name Country Code  \\\n",
+       "0    Brunei Darussalam          BRN   \n",
+       "10            Viet Nam          VNM   \n",
+       "9          Timor-Leste          TLS   \n",
+       "8             Thailand          THA   \n",
+       "7            Singapore          SGP   \n",
+       "6          Philippines          PHL   \n",
+       "220            Average          AVG   \n",
+       "4              Myanmar          MMR   \n",
+       "1            Indonesia          IDN   \n",
+       "5             Malaysia          MYS   \n",
+       "3              Lao PDR          LAO   \n",
+       "2             Cambodia          KHM   \n",
+       "221            Average          AVG   \n",
+       "21            Viet Nam          VNM   \n",
+       "20         Timor-Leste          TLS   \n",
+       "\n",
+       "                                        Indicator Name  Indicator Code  Year  \\\n",
+       "0    Prevalence of anemia among children (% of chil...  SH.ANM.CHLD.ZS  2000   \n",
+       "10   Prevalence of anemia among children (% of chil...  SH.ANM.CHLD.ZS  2000   \n",
+       "9    Prevalence of anemia among children (% of chil...  SH.ANM.CHLD.ZS  2000   \n",
+       "8    Prevalence of anemia among children (% of chil...  SH.ANM.CHLD.ZS  2000   \n",
+       "7    Prevalence of anemia among children (% of chil...  SH.ANM.CHLD.ZS  2000   \n",
+       "6    Prevalence of anemia among children (% of chil...  SH.ANM.CHLD.ZS  2000   \n",
+       "220  Prevalence of anemia among children (% of chil...  SH.ANM.CHLD.ZS  2000   \n",
+       "4    Prevalence of anemia among children (% of chil...  SH.ANM.CHLD.ZS  2000   \n",
+       "1    Prevalence of anemia among children (% of chil...  SH.ANM.CHLD.ZS  2000   \n",
+       "5    Prevalence of anemia among children (% of chil...  SH.ANM.CHLD.ZS  2000   \n",
+       "3    Prevalence of anemia among children (% of chil...  SH.ANM.CHLD.ZS  2000   \n",
+       "2    Prevalence of anemia among children (% of chil...  SH.ANM.CHLD.ZS  2000   \n",
+       "221  Prevalence of anemia among children (% of chil...  SH.ANM.CHLD.ZS  2001   \n",
+       "21   Prevalence of anemia among children (% of chil...  SH.ANM.CHLD.ZS  2001   \n",
+       "20   Prevalence of anemia among children (% of chil...  SH.ANM.CHLD.ZS  2001   \n",
+       "\n",
+       "     Value  Year_Date  \n",
+       "0     17.0 2000-01-01  \n",
+       "10    33.6 2000-01-01  \n",
+       "9     51.3 2000-01-01  \n",
+       "8     26.5 2000-01-01  \n",
+       "7     11.4 2000-01-01  \n",
+       "6     35.0 2000-01-01  \n",
+       "220   37.5 2000-01-01  \n",
+       "4     57.5 2000-01-01  \n",
+       "1     43.9 2000-01-01  \n",
+       "5     20.2 2000-01-01  \n",
+       "3     50.2 2000-01-01  \n",
+       "2     65.9 2000-01-01  \n",
+       "221   36.7 2001-01-01  \n",
+       "21    32.2 2001-01-01  \n",
+       "20    49.9 2001-01-01  "
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SEA_Anemia_U5_with_averages = df_with_averages\n",
+    "SEA_Anemia_U5_with_averages.head(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "id": "669ca721",
    "metadata": {},
    "outputs": [],
    "source": [
-    "SEA_Anemia_U5_melted.to_csv(r'C:\\Users\\Leon Pascual\\Documents\\GitHub\\CPE311_Computational-Thinking-with-Python\\Final\\ADSE\\datasets\\exported\\PVA_U5_melted.csv', index=False)"
+    "SEA_Anemia_U5_with_averages.to_csv(r'C:\\Users\\Leon Pascual\\Documents\\GitHub\\CPE311_Computational-Thinking-with-Python\\Final\\ADSE\\datasets\\exported\\SEA_Anemia_U5_with_averages.csv', index=False)"
    ]
   },
   {
